tests/pass/closure.us
fn main() -> i32{
   let a = |x:i32| {
        while true {
                
        }

        return 10;
    };

    return a(10);
}

fn foo() -> i32{
    let v = 10;
    let a = |x:i32| {
        while true {
                
        }

        v = v+10;

        return 10;
    };

    let b = || {
    };

    return a(10);
}